[gd_scene load_steps=54 format=3 uid="uid://bgac4dvwiik6o"]

[ext_resource type="Texture2D" uid="uid://dro8h544qqecp" path="res://Imports/Character.png" id="1_08ux8"]
[ext_resource type="Texture2D" uid="uid://bu5vo4nveajp6" path="res://Imports/Dirt.png" id="2_0vk4h"]
[ext_resource type="Texture2D" uid="uid://b7sbflvkom242" path="res://Imports/Spikes.png" id="2_7k1xy"]
[ext_resource type="Script" path="res://Scenes/Character.gd" id="2_svp5f"]
[ext_resource type="Texture2D" uid="uid://dsb0s5qrcm2r2" path="res://Imports/Background.png" id="4_2ilvk"]
[ext_resource type="Texture2D" uid="uid://bwb66a685wuhy" path="res://Imports/Flag.png" id="6_dtiuo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n5dk0"]
texture = ExtResource("2_0vk4h")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="TileSet" id="TileSet_8ull3"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_n5dk0")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rh8gt"]
texture = ExtResource("2_7k1xy")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0

[sub_resource type="TileSet" id="TileSet_adrbe"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_rh8gt")

[sub_resource type="AtlasTexture" id="AtlasTexture_pslow"]
atlas = ExtResource("1_08ux8")
region = Rect2(20, 20, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsene"]
atlas = ExtResource("1_08ux8")
region = Rect2(30, 20, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbio6"]
atlas = ExtResource("1_08ux8")
region = Rect2(0, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1dv0"]
atlas = ExtResource("1_08ux8")
region = Rect2(10, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0oe1"]
atlas = ExtResource("1_08ux8")
region = Rect2(20, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_t13fn"]
atlas = ExtResource("1_08ux8")
region = Rect2(30, 0, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_42h2w"]
atlas = ExtResource("1_08ux8")
region = Rect2(0, 10, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2iol"]
atlas = ExtResource("1_08ux8")
region = Rect2(10, 10, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm48q"]
atlas = ExtResource("1_08ux8")
region = Rect2(20, 10, 10, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhy21"]
atlas = ExtResource("1_08ux8")
region = Rect2(30, 10, 10, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_7j3v7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pslow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsene")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbio6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1dv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0oe1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t13fn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_42h2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2iol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm48q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhy21")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_htogj"]
size = Vector2(4, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_un7wc"]
size = Vector2(17, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrql4"]
size = Vector2(3576, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p3r2m"]
size = Vector2(35.25, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m64ad"]
size = Vector2(47, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_310nv"]
size = Vector2(41, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_catyv"]
size = Vector2(11, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6q2v"]
atlas = ExtResource("6_dtiuo")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb6rh"]
atlas = ExtResource("6_dtiuo")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndw5n"]
atlas = ExtResource("6_dtiuo")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_2thks"]
atlas = ExtResource("6_dtiuo")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7iby"]
atlas = ExtResource("6_dtiuo")
region = Rect2(32, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_s818j"]
atlas = ExtResource("6_dtiuo")
region = Rect2(40, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_t48uw"]
atlas = ExtResource("6_dtiuo")
region = Rect2(48, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi7ra"]
atlas = ExtResource("6_dtiuo")
region = Rect2(56, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd2ta"]
atlas = ExtResource("6_dtiuo")
region = Rect2(64, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0klr"]
atlas = ExtResource("6_dtiuo")
region = Rect2(72, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_xryh6"]
atlas = ExtResource("6_dtiuo")
region = Rect2(80, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1hjs"]
atlas = ExtResource("6_dtiuo")
region = Rect2(88, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy5st"]
atlas = ExtResource("6_dtiuo")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3fvg"]
atlas = ExtResource("6_dtiuo")
region = Rect2(8, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekki6"]
atlas = ExtResource("6_dtiuo")
region = Rect2(16, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnau6"]
atlas = ExtResource("6_dtiuo")
region = Rect2(24, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kkur"]
atlas = ExtResource("6_dtiuo")
region = Rect2(32, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs0rb"]
atlas = ExtResource("6_dtiuo")
region = Rect2(40, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac6n3"]
atlas = ExtResource("6_dtiuo")
region = Rect2(48, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_uol23"]
atlas = ExtResource("6_dtiuo")
region = Rect2(56, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d3je"]
atlas = ExtResource("6_dtiuo")
region = Rect2(64, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifk45"]
atlas = ExtResource("6_dtiuo")
region = Rect2(72, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ychwk"]
atlas = ExtResource("6_dtiuo")
region = Rect2(80, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_jler0"]
atlas = ExtResource("6_dtiuo")
region = Rect2(88, 8, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_1lavx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6q2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb6rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndw5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2thks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7iby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s818j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t48uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi7ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd2ta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0klr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xryh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1hjs")
}],
"loop": true,
"name": &"not_taken",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy5st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3fvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekki6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnau6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kkur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs0rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac6n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uol23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d3je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifk45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ychwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jler0")
}],
"loop": true,
"name": &"taken",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]

[node name="Tilemaps" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="Tilemaps"]
z_index = 1
texture_filter = 1
tile_set = SubResource("TileSet_8ull3")
format = 2
layer_0/tile_data = PackedInt32Array(327680, 65536, 0, 327681, 65536, 0, 327682, 65536, 0, 393218, 65536, 1, 393217, 65536, 1, 393216, 65536, 1, 262148, 0, 0, 327684, 262144, 1, 327683, 65536, 0, 393219, 65536, 1, 393220, 65536, 1, 393221, 65536, 1, 327685, 65536, 1, 262149, 65536, 0, 262150, 65536, 0, 327686, 65536, 1, 393222, 65536, 1, 262151, 131072, 0, 327687, 131072, 1, 393223, 131072, 1, 393226, 0, 0, 393227, 65536, 0, 393228, 65536, 0, 393229, 65536, 0, 393230, 65536, 0, 393231, 65536, 0, 393232, 262144, 1, 327696, 0, 1, 262160, 0, 1, 196624, 0, 0, 196626, 131072, 0, 196625, 65536, 0, 262162, 131072, 1, 262161, 65536, 1, 327697, 65536, 1, 393233, 65536, 1, 327698, 196608, 1, 327699, 65536, 0, 327700, 65536, 0, 393234, 65536, 1, 393235, 65536, 1, 393236, 65536, 1, 393237, 65536, 1, 327701, 65536, 0, 327703, 65536, 0, 327702, 65536, 0, 393238, 65536, 1, 393239, 65536, 1, 327704, 65536, 0, 393240, 65536, 1, 327705, 65536, 0, 327706, 65536, 0, 327707, 131072, 0, 393243, 131072, 1, 393242, 65536, 1, 393241, 65536, 1, 65563, 262144, 0, 131099, 0, 2, 131100, 65536, 2, 131101, 131072, 2, 65565, 196608, 0, 65566, 65536, 2, 65567, 131072, 2, 31, 196608, 0, 32, 131072, 2, 30, 65536, 1, 29, 65536, 1, 28, 65536, 1, 27, 65536, 1, 65564, 65536, 1, 327712, 0, 1, 393248, 0, 1, 327714, 65536, 1, 327713, 65536, 1, 393249, 65536, 1, 393250, 65536, 1, 65560, 0, 2, 65561, 65536, 2, 65562, 65536, 2, 25, 65536, 1, 26, 65536, 1, 24, 0, 1, 262176, 0, 0, 262177, 65536, 0, 262178, 65536, 0, 262179, 131072, 0, 327715, 131072, 1, 393251, 131072, 1, 9, 0, 2, 10, 262144, 0, 65546, 0, 2, 65547, 262144, 0, 131083, 0, 1, 196619, 0, 2, 196621, 131072, 2, 196620, 65536, 2, 131085, 131072, 1, 65549, 131072, 1, 13, 196608, 0, 14, 131072, 2, 11, 65536, 1, 12, 65536, 1, 65548, 65536, 1, 131084, 65536, 1, 131110, 0, 0, 196646, 0, 2, 196647, 262144, 0, 262183, 0, 1, 327719, 0, 2, 327720, 65536, 2, 327721, 262144, 0, 393257, 0, 1, 131111, 65536, 0, 131112, 65536, 0, 196648, 65536, 1, 262184, 65536, 1, 262185, 65536, 1, 196649, 196608, 1, 196650, 65536, 0, 262186, 65536, 1, 327722, 65536, 1, 393258, 65536, 1, 196651, 131072, 0, 262187, 131072, 1, 131113, 131072, 0, 327723, 196608, 1, 327724, 65536, 0, 327725, 65536, 0, 327726, 65536, 0, 327727, 65536, 0, 327728, 65536, 0, 393259, 65536, 1, 393260, 65536, 1, 393261, 65536, 1, 393262, 65536, 1, 393263, 65536, 1, 393264, 65536, 1, 327729, 65536, 0, 393265, 65536, 1, 327730, 131072, 0, 393266, 131072, 1, 196662, 131072, 2, 131126, 131072, 1, 65590, 131072, 1, 54, 131072, 1, 65587, 0, 2, 51, 262144, 0, 50, 65536, 2, 49, 65536, 2, 48, 0, 2, 52, 65536, 1, 53, 65536, 1, 393272, 0, 0, 196660, 0, 2, 131124, 0, 1, 65588, 262144, 0, 131125, 65536, 1, 196661, 65536, 2, 65589, 65536, 1, 393275, 131072, 0, 393273, 65536, 0, 393274, 65536, 0, 65595, 0, 2, 59, 262144, 0, 58, 0, 2, 65596, 65536, 2, 65597, 65536, 2, 62, 65536, 1, 61, 65536, 1, 60, 65536, 1, 65598, 65536, 2, 65599, 65536, 2, 65600, 262144, 0, 131136, 0, 1, 196672, 0, 1, 327746, 131072, 2, 196673, 65536, 1, 131137, 65536, 1, 65601, 65536, 1, 65, 65536, 1, 64, 65536, 1, 63, 65536, 1, 393285, 0, 0, 393286, 65536, 0, 393287, 131072, 0, 262210, 196608, 0, 262211, 65536, 2, 262212, 65536, 2, 262213, 131072, 2, 196677, 196608, 0, 196678, 65536, 2, 131142, 65536, 1, 65606, 65536, 1, 65605, 65536, 1, 69, 65536, 1, 70, 65536, 1, 68, 65536, 1, 67, 65536, 1, 66, 65536, 1, 65602, 65536, 1, 65603, 65536, 1, 131139, 65536, 1, 131140, 65536, 1, 65604, 65536, 1, 131141, 65536, 1, 131138, 65536, 1, 196674, 65536, 1, 196675, 65536, 1, 196676, 65536, 1, 196679, 65536, 2, 196680, 131072, 2, 131144, 131072, 1, 131143, 65536, 1, 65607, 65536, 1, 71, 65536, 1, 196682, 0, 0, 65608, 196608, 0, 65609, 65536, 2, 262218, 0, 2, 72, 65536, 1, 262219, 262144, 0, 327755, 0, 2, 327756, 262144, 0, 393292, 0, 1, 196683, 65536, 0, 196684, 65536, 0, 196685, 65536, 0, 262220, 65536, 1, 262221, 65536, 1, 327757, 65536, 1, 393293, 65536, 1, 65610, 131072, 2, 74, 196608, 0, 73, 65536, 1, 75, 65536, 2, 76, 65536, 2, 77, 65536, 2, 78, 65536, 2, 79, 65536, 2, 196686, 65536, 0, 196687, 65536, 0, 196688, 65536, 0, 196689, 65536, 0, 262222, 65536, 1, 262223, 65536, 1, 262224, 65536, 1, 262225, 65536, 1, 327761, 65536, 1, 327760, 65536, 1, 327759, 65536, 1, 327758, 65536, 1, 393294, 65536, 1, 393295, 65536, 1, 393296, 65536, 1, 393297, 65536, 1, 82, 65536, 2, 81, 65536, 2, 80, 65536, 2, 196690, 65536, 0, 262226, 65536, 1, 327762, 65536, 1, 393298, 65536, 1, 83, 65536, 2, 85, 65536, 2, 84, 65536, 2, 65623, 0, 2, 87, 262144, 0, 86, 65536, 2, 327767, 0, 0, 393303, 0, 1, 327768, 65536, 0, 327770, 65536, 0, 327771, 65536, 0, 65624, 65536, 2, 65625, 65536, 2, 65626, 262144, 0, 131163, 65536, 2, 65627, 65536, 1, 91, 65536, 1, 90, 65536, 1, 89, 65536, 1, 88, 65536, 1, 327769, 65536, 0, 327772, 65536, 0, 327773, 131072, 0, 393309, 131072, 1, 131165, 131072, 2, 65629, 196608, 0, 93, 65536, 1, 92, 65536, 1, 65628, 65536, 1, 131164, 65536, 2, 393308, 65536, 1, 393307, 65536, 1, 393306, 65536, 1, 393305, 65536, 1, 393304, 65536, 1, 196705, 0, 0, 196706, 65536, 0, 196707, 131072, 0, 262241, 0, 1, 262242, 65536, 1, 262243, 131072, 1, 327777, 0, 1, 327778, 65536, 1, 327779, 131072, 1, 393313, 0, 1, 393314, 65536, 1, 393315, 131072, 1, 65630, 131072, 2, 96, 131072, 2, 94, 196608, 0, 95, 65536, 2, 131175, 131072, 1, 65639, 131072, 1, 103, 131072, 1, 131174, 0, 1, 65638, 0, 1, 102, 0, 1, 196710, 0, 2, 196711, 131072, 2, 393318, 0, 0, 393319, 131072, 0, 327786, 0, 1, 393322, 0, 1, 196714, 0, 0, 262250, 0, 1, 327744, 0, 2, 262208, 0, 1, 262209, 65536, 1, 327745, 65536, 2, 131162, 0, 2, 262227, 131072, 1, 327763, 131072, 1, 393299, 196608, 1, 196691, 131072, 0, 393300, 131072, 0, 196715, 131072, 0, 262251, 131072, 1, 327787, 131072, 1, 393323, 131072, 1, 196727, 0, 0, 327800, 65536, 1, 262264, 65536, 1, 262263, 0, 1, 327799, 0, 1, 393335, 0, 1, 393336, 65536, 1, 196728, 65536, 0, 196729, 131072, 0, 262265, 131072, 1, 327801, 131072, 1, 393337, 131072, 1, 121, 0, 2, 122, 262144, 0, 65658, 0, 2, 65659, 262144, 0, 131195, 0, 1, 196731, 0, 1, 262267, 0, 1, 327803, 0, 2, 327804, 65536, 2, 327805, 65536, 2, 327806, 131072, 2, 393346, 0, 0, 262271, 65536, 2, 262272, 65536, 2, 262273, 65536, 2, 262270, 196608, 0, 262274, 65536, 2, 262275, 131072, 2, 196739, 131072, 1, 131203, 131072, 1, 65667, 131072, 1, 131, 131072, 1, 196738, 65536, 1, 196737, 65536, 1, 196736, 65536, 1, 196735, 65536, 1, 196734, 65536, 1, 196733, 65536, 1, 196732, 65536, 1, 262268, 65536, 1, 262269, 65536, 1, 131197, 65536, 1, 131196, 65536, 1, 131198, 65536, 1, 131199, 65536, 1, 65664, 65536, 1, 131201, 65536, 1, 131202, 65536, 1, 65666, 65536, 1, 130, 65536, 1, 129, 65536, 1, 128, 65536, 1, 65665, 65536, 1, 131200, 65536, 1, 65663, 65536, 1, 127, 65536, 1, 126, 65536, 1, 65662, 65536, 1, 65661, 65536, 1, 125, 65536, 1, 124, 65536, 1, 123, 65536, 1, 65660, 65536, 1, 393347, 65536, 0, 393348, 65536, 0, 393349, 65536, 0, 393350, 65536, 0, 131215, 0, 1, 143, 0, 1, -65393, 0, 1, -130929, 0, 1, -196465, 0, 1, -262001, 0, 1, -327537, 0, 1, -393073, 0, 1, -458609, 0, 1, -65415, 0, 1, -130951, 0, 1, -196487, 0, 1, -262023, 0, 1, -327559, 0, 1, -393095, 0, 1, -458631, 0, 1, -65405, 131072, 1, -130941, 131072, 1, -196477, 131072, 1, -458621, 131072, 1, -393085, 131072, 1, -327549, 131072, 1, -262013, 131072, 1, -65433, 131072, 1, -130969, 131072, 1, -196505, 131072, 1, -262041, 131072, 1, -327577, 131072, 1, -393113, 131072, 1, -65434, 0, 1, -130970, 0, 1, -196506, 0, 1, -262042, 0, 1, -327578, 0, 1, -393114, 0, 1, -65440, 131072, 1, -130976, 131072, 1, -196512, 131072, 1, -262048, 131072, 1, -393120, 131072, 1, -327584, 131072, 1, -65478, 0, 1, -131014, 0, 1, -196550, 0, 1, -262086, 0, 1, -327622, 0, 1, -393158, 0, 1, -524230, 0, 1, -458694, 0, 1, -65488, 0, 1, -131024, 0, 1, -196560, 0, 1, -262096, 0, 1, -327632, 0, 1, -393168, 0, 1, -524240, 0, 1, -458704, 0, 1, -589776, 0, 1, -65482, 131072, 1, -131018, 131072, 1, -196554, 131072, 1, -262090, 131072, 1, -327626, 131072, 1, -393162, 131072, 1, -458698, 131072, 1, -524234, 131072, 1, -65504, 131072, 1, -131040, 131072, 1, -196576, 131072, 1, -262112, 131072, 1, -327648, 131072, 1, -393184, 131072, 1, -458720, 131072, 1, -524256, 131072, 1, -589792, 131072, 1, -65512, 131072, 1, -131048, 131072, 1, -196584, 131072, 1, -262120, 131072, 1, -327656, 131072, 1, -393192, 131072, 1, -458728, 131072, 1, -524264, 131072, 1, -589800, 131072, 1, -65522, 131072, 1, -131058, 131072, 1, -196594, 131072, 1, -262130, 131072, 1, -327666, 131072, 1, -393202, 131072, 1, -458738, 131072, 1, -524274, 131072, 1, -65527, 131072, 1, -131063, 131072, 1, -196599, 131072, 1, -262135, 131072, 1, -327671, 131072, 1, -393207, 131072, 1, -458743, 131072, 1, -524279, 131072, 1, 393351, 262144, 1, 327815, 0, 0, 327816, 65536, 0, 327817, 65536, 0, 327818, 65536, 0, 327819, 262144, 1, 262283, 0, 0, 262284, 65536, 0, 262285, 65536, 0, 262286, 65536, 0, 262287, 262144, 1, 196751, 0, 1, 327820, 65536, 1, 327821, 65536, 1, 327822, 65536, 1, 327823, 65536, 1, 393359, 65536, 1, 393358, 65536, 1, 393357, 65536, 1, 393356, 65536, 1, 393355, 65536, 1, 393354, 65536, 1, 393353, 65536, 1, 393352, 65536, 1, 65679, 0, 1)

[node name="TileMap2" type="TileMap" parent="Tilemaps"]
texture_filter = 1
tile_set = SubResource("TileSet_adrbe")
format = 2
layer_0/tile_data = PackedInt32Array(262166, 0, 0, 262167, 65536, 0, 262168, 131072, 0, 262188, 196608, 0, 262189, 262144, 0, 262190, 327680, 0, 262191, 65536, 0, 262192, 131072, 0, 131149, 196608, 0, 131150, 262144, 0, 131151, 327680, 0, 131152, 196608, 0, 131153, 262144, 0, 131154, 327680, 0, 262232, 196608, 0, 262233, 262144, 0, 262234, 327680, 0, 262231, 0, 0, 262235, 65536, 0, 262236, 131072, 0, 131178, 524288, 0, 131179, 589824, 0)

[node name="Character" type="CharacterBody2D" parent="."]
position = Vector2(9, 36)
script = ExtResource("2_svp5f")

[node name="Sprite" type="AnimatedSprite2D" parent="Character"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_7j3v7")
animation = &"die"
autoplay = "idle"
frame_progress = 0.777184

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_htogj")

[node name="Backgrounds" type="Node2D" parent="."]

[node name="Background2" type="Sprite2D" parent="Backgrounds"]
z_index = -1
texture_filter = 1
position = Vector2(144, 27)
texture = ExtResource("4_2ilvk")

[node name="Background3" type="Sprite2D" parent="Backgrounds"]
z_index = -1
texture_filter = 1
position = Vector2(240, 27)
texture = ExtResource("4_2ilvk")

[node name="Background4" type="Sprite2D" parent="Backgrounds"]
z_index = -1
texture_filter = 1
position = Vector2(336, 27)
texture = ExtResource("4_2ilvk")

[node name="Background5" type="Sprite2D" parent="Backgrounds"]
z_index = -1
texture_filter = 1
position = Vector2(432, 27)
texture = ExtResource("4_2ilvk")

[node name="Background6" type="Sprite2D" parent="Backgrounds"]
z_index = -1
texture_filter = 1
position = Vector2(528, 27)
texture = ExtResource("4_2ilvk")

[node name="Background7" type="Sprite2D" parent="Backgrounds"]
z_index = -1
texture_filter = 1
position = Vector2(624, 27)
texture = ExtResource("4_2ilvk")

[node name="Background8" type="Sprite2D" parent="Backgrounds"]
z_index = -1
texture_filter = 1
position = Vector2(720, 27)
texture = ExtResource("4_2ilvk")

[node name="Background9" type="Sprite2D" parent="Backgrounds"]
z_index = -1
texture_filter = 1
position = Vector2(816, 27)
texture = ExtResource("4_2ilvk")

[node name="Background10" type="Sprite2D" parent="Backgrounds"]
z_index = -1
texture_filter = 1
position = Vector2(912, 27)
texture = ExtResource("4_2ilvk")

[node name="Background11" type="Sprite2D" parent="Backgrounds"]
z_index = -1
texture_filter = 1
position = Vector2(1008, 27)
texture = ExtResource("4_2ilvk")

[node name="Background12" type="Sprite2D" parent="Backgrounds"]
z_index = -1
texture_filter = 1
position = Vector2(1104, 27)
texture = ExtResource("4_2ilvk")

[node name="Background" type="Sprite2D" parent="Backgrounds"]
z_index = -1
texture_filter = 1
position = Vector2(48, 27)
texture = ExtResource("4_2ilvk")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
ignore_rotation = false

[node name="Areas" type="Node2D" parent="."]

[node name="Pics1" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Pics1"]
position = Vector2(186.5, 37.5)
shape = SubResource("RectangleShape2D_un7wc")

[node name="bottom" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/bottom"]
position = Vector2(1238, 101.5)
shape = SubResource("RectangleShape2D_qrql4")

[node name="Pics2" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Pics2"]
position = Vector2(369.375, 37.5)
shape = SubResource("RectangleShape2D_p3r2m")

[node name="Pics3" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Pics3"]
position = Vector2(639.5, 21.5)
shape = SubResource("RectangleShape2D_m64ad")

[node name="Pics4" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Pics4"]
position = Vector2(718.5, 37.5)
shape = SubResource("RectangleShape2D_310nv")

[node name="Pics5" type="Area2D" parent="Areas"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Pics5"]
position = Vector2(857.5, 21.5)
shape = SubResource("RectangleShape2D_catyv")

[node name="Checkpoints" type="Node2D" parent="."]

[node name="CP1" type="AnimatedSprite2D" parent="Checkpoints"]
texture_filter = 1
position = Vector2(464, 44)
sprite_frames = SubResource("SpriteFrames_1lavx")
animation = &"not_taken"
autoplay = "not_taken"
frame_progress = 0.952328

[node name="CP2" type="AnimatedSprite2D" parent="Checkpoints"]
texture_filter = 1
position = Vector2(788, 20)
sprite_frames = SubResource("SpriteFrames_1lavx")
animation = &"not_taken"
autoplay = "not_taken"
frame_progress = 0.952328

[node name="CP3" type="AnimatedSprite2D" parent="Checkpoints"]
texture_filter = 1
position = Vector2(1132, 28)
sprite_frames = SubResource("SpriteFrames_1lavx")
animation = &"not_taken"
autoplay = "not_taken"
frame_progress = 0.952328

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="ColorTimer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Areas/Pics1" to="Character" method="_on_pics_1_body_entered"]
[connection signal="body_entered" from="Areas/bottom" to="Character" method="_on_bottom_body_entered"]
[connection signal="body_entered" from="Areas/Pics2" to="Character" method="_on_pics_2_body_entered"]
[connection signal="body_entered" from="Areas/Pics3" to="Character" method="_on_pics_3_body_entered"]
[connection signal="body_entered" from="Areas/Pics4" to="Character" method="_on_pics_4_body_entered"]
[connection signal="body_entered" from="Areas/Pics5" to="Character" method="_on_pics_5_body_entered"]
[connection signal="timeout" from="ColorTimer" to="Character" method="_on_color_timer_timeout"]
[connection signal="timeout" from="Timer" to="Character" method="_on_timer_timeout"]
